# equalexperts_dataeng_exercise

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-exercice-check.yml
docs/: calculating_outliers.tex
equalexperts_dataeng_exercise/: db.py  ingest.py  outliers.py  utility.py
equalexperts_dataeng_exercise/scripts/: exercise.py  fetch_data.py
tests/: db_test.py  ingest_test.py  outliers_test.py
tests/exercise_tests/: README.md  test_ingestion.py  test_outliers.py
tests/test-resources/: all-samples-votes-outliers.jsonl  sample-votes-PostId.jsonl  sample-votes-VoteTypeId.jsonl  sample-votes-dups.jsonl  sample-votes-invalid-CreationDates.jsonl  sample-votes-invalid-Id.jsonl  sample-votes-invalid-datatypes.jsonl  samples-votes-incremental.jsonl  samples-votes-outliers1.jsonl  samples-votes-outliers2.jsonl  samples-votes-outliers3.jsonl  samples-votes-outliers4.jsonl  samples-votes-upsert-col.jsonl  samples-votes-upsert.jsonl  samples-votes.jsonl
