[tool.poetry]
name = "equalexperts_dataeng_exercise"
version = "0.1.0"
description = "The Python version of the Equal Experts data engineering challenge"
authors = ["Equal Experts <data@equalexperts.com>"]
readme = "README.md"
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
typer = "^0.9.0"
duckdb = "^0.8.0"


[tool.poetry.group.dev.dependencies]
rope = "^1.8.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
autopep8 = "^2.0.2"
types-requests = "^2.31.0.1"

[tool.poetry.scripts]
exercise = "equalexperts_dataeng_exercise.scripts.exercise:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["__init__.py", "exercise.py", "fetch_data.py"]
